tests/ui/dep_not_found.fail.stderr
error: cannot find dependency: y
 --> tests/ui/dep_not_found.fail.rs:5:5
  |
5 |     #[depends_on(y)]
  |     ^^^^^^^^^^^^^^^^
